fix(ui): improve text size because it is really hard to read

--- a/src/app/components/current-town/current-town.component.scss
+++ b/src/app/components/current-town/current-town.component.scss
@@ -19,3 +19,9 @@
   flex-direction: column;
   overflow-y: auto;
 }
+
+/*
+.info ion-item {
+  font-size: 1.3rem;
+}
+*/
